feat: finalize clinical analytics and adherence monitoring logic