@@ -31,21 +31,55 @@ public class AuthController {
     @PostMapping("/register")
     public ResponseEntity<?> registerUser(@RequestBody User user) {
         try {
+            System.out.println("DEBUG: Attempting registration for email: " + user.getEmail());
             User savedUser = authService.registerUser(user);
+            System.out.println("DEBUG: Registration successful for: " + savedUser.getEmail());
             return ResponseEntity.ok(Map.of("message", "User registered successfully as " + savedUser.getRole()));
         } catch (Exception e) {
-            return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
+            System.err.println("ERROR during registration: " + e.getMessage());
+            e.printStackTrace();
+            String errorMessage = e.getMessage();
+            if (errorMessage == null) {
+                errorMessage = "Validation error or missing fields (Password/Role may be null)";
+            }
+            return ResponseEntity.badRequest().body(java.util.Collections.singletonMap("message", errorMessage));
         }
     }
 
     @PostMapping("/login")
-    public ResponseEntity<?> loginUser(@RequestBody Map<String, String> loginRequest) {
-        String email = loginRequest.get("email");
+    public ResponseEntity<?> loginUser(@RequestBody Map<String, String> loginRequest, jakarta.servlet.http.HttpServletRequest request) {
+        String email = loginRequest.get("email") != null ? loginRequest.get("email").toLowerCase() : "";
         String password = loginRequest.get("password");
+
+        System.out.println("DEBUG: Login attempt for email: [" + email + "]");
 
         return userRepository.findByEmail(email)
                 .map(user -> {
-                    if (passwordEncoder.matches(password, user.getPassword())) {
+                    if (!user.isActive()) {
+                        System.out.println("DEBUG: Login rejected - Account Suspended");
+                        return ResponseEntity.status(403).body(Map.of("message", "Account Suspended. Please contact administration."));
+                    }
+                    
+                    String requestedRole = loginRequest.get("role");
+                    if (requestedRole != null && !requestedRole.equalsIgnoreCase(user.getRole().name())) {
+                        System.out.println("DEBUG: Login rejected - Role mismatch. Expected: " + user.getRole() + ", Got: " + requestedRole);
+                        return ResponseEntity.status(401).body(Map.of("message", "Invalid role selected for this account. Please select the correct module."));
+                    }
+
+                    boolean matches = passwordEncoder.matches(password, user.getPassword());
+                    System.out.println("DEBUG: User found! Role: " + user.getRole() + ", Hash in DB: [" + user.getPassword() + "]");
+                    System.out.println("DEBUG: Password matches: " + matches);
+
+                    if (matches) {
+                        // Capture IP and Timestamp for User 360
+                        String ipAddress = request.getHeader("X-FORWARDED-FOR");
+                        if (ipAddress == null || "".equals(ipAddress)) {
+                            ipAddress = request.getRemoteAddr();
+                        }
+                        user.setLastIpAddress(ipAddress);
+                        user.setLastLogin(java.time.LocalDateTime.now());
+                        userRepository.save(user);
+
                         String token = jwtUtil.generateToken(user.getEmail(), user.isVerified());
                         return ResponseEntity.ok(Map.of(
                                 "token", token,
@@ -53,7 +87,10 @@ public class AuthController {
                     }
                     return ResponseEntity.status(401).body(Map.of("message", "Invalid email or password"));
                 })
-                .orElse(ResponseEntity.status(401).body(Map.of("message", "User not found")));
+                .orElseGet(() -> {
+                    System.out.println("DEBUG: User NOT found in DB for email: [" + email + "]");
+                    return ResponseEntity.status(401).body(Map.of("message", "User not found"));
+                });
     }
 
     @GetMapping("/me")
@@ -67,5 +104,44 @@ public class AuthController {
                     return ResponseEntity.ok(user);
                 })
                 .orElse(ResponseEntity.notFound().build());
+    }
+
+    @PutMapping("/profile")
+    public ResponseEntity<?> updateProfile(
+            @RequestHeader("Authorization") String token,
+            @RequestBody Map<String, String> updates) {
+        try {
+            String jwt = token.substring(7);
+            String email = jwtUtil.extractUsername(jwt);
+
+            User user = userRepository.findByEmail(email)
+                    .orElseThrow(() -> new RuntimeException("User not found"));
+
+            // Apply permitted field updates
+            if (updates.containsKey("fullName") && updates.get("fullName") != null) {
+                user.setFullName(updates.get("fullName").trim());
+            }
+            if (updates.containsKey("phone")) {
+                user.setPhone(updates.get("phone"));
+            }
+            if (updates.containsKey("address")) {
+                user.setAddress(updates.get("address"));
+            }
+            if (updates.containsKey("medicalHistory")) {
+                user.setMedicalHistory(updates.get("medicalHistory"));
+            }
+            if (updates.containsKey("allergies")) {
+                user.setAllergies(updates.get("allergies"));
+            }
+
+            User saved = userRepository.save(user);
+            System.out.println("Profile updated for user: " + saved.getEmail());
+
+            return ResponseEntity.ok(Map.of(
+                    "message", "Profile updated successfully",
+                    "user", saved));
+        } catch (Exception e) {
+            return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
+        }
     }
 }
